--- a/app/index.html
+++ b/app/index.html
@@ -59,6 +59,8 @@
         <script src="scripts/controllers/controllers.js"></script>
         <script src="scripts/controllers/MainController.js"></script>
         <script src="scripts/controllers/StopwatchController.js"></script>
+        <script src="scripts/controllers/GuesserController.js"></script>
+
         <script src="scripts/directives/directives.js"></script>
         <!-- endbuild -->
 </body>
