--- a/app/index.html
+++ b/app/index.html
@@ -60,6 +60,8 @@
         <script src="scripts/controllers/MainController.js"></script>
         <script src="scripts/controllers/StopwatchController.js"></script>
         <script src="scripts/controllers/GuesserController.js"></script>
+        <script src="scripts/controllers/PickerController.js"></script>
+
 
         <script src="scripts/directives/directives.js"></script>
         <!-- endbuild -->
